<resources>
    <!-- general -->
    <string name="app_name">Pukimon</string>

    <!-- menu -->
    <string name="action_settings">Einstellungen</string>
    <string name="menu_title_clear_data">Daten löschen</string>

    <!-- main fragment -->
    <string name="button_label_new_entry">Neuer Eintrag</string>

    <!-- new event fragments -->
    <string name="text_view_date_text">Datum</string>
    <string name="text_view_time_text">Zeit</string>
    <string name="text_view_amount_text">Menge</string>
    <string name="button_ok_text">OK</string>
    <string name="button_cancel_text">Abbrechen</string>
    <string name="title_activity_new_event">Neuer Eintrag</string>
    <string name="text_view_from_time_text">Von</string>
    <string name="text_view_to_time_text">Bis</string>
    <string name="title_update_entry">Eintrag bearbeiten</string>

    <!-- context menu -->
    <string name="context_menu_delete_item">Löschen</string>
    <string name="context_menu_edit_item">Bearbeiten</string>

    <!-- other -->
    <string name="format_hour">Stunde</string>
    <string name="format_hours">Stunden</string>
    <string name="format_minute">Minute</string>
    <string name="format_minutes">Minuten</string>
    <string name="format_milliliters">"ml"</string>
    <string name="format_gram">g</string>
    <string name="today">Heute</string>
    <string name="yesterday">Gestern</string>
    <string name="sleeping">Schläft…</string>
    <string name="list_item_time_ago">vor %s</string>
    <string name="str_since">Seit</string>
</resources>
