<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mxwlone.NewEntryFragment"
    android:orientation="vertical">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:gravity="start" >

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/text_view_date_text"
            android:id="@+id/drinkEntryTextViewDate"
            android:inputType="none"
            android:textSize="20sp" />

        <EditText
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:ems="10"
            android:id="@+id/drinkEntryEditTextDate"
            android:editable="false" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:gravity="start">


        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/text_view_time_text"
            android:id="@+id/textViewTime"
            android:inputType="none"
            android:textSize="20sp" />

        <EditText
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/editTextTime"
            android:editable="false"
            android:inputType="none" />


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/text_view_amount_text"
            android:id="@+id/textViewAmount"
            android:inputType="none"
            android:textSize="20sp" />

        <EditText
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editTextAmount"
            android:password="false" />

    </LinearLayout>

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_cancel_text"
            android:onClick="cancelButtonClicked"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_ok_text"
            android:onClick="okButtonClickedFromDrinkEntry"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

</LinearLayout>
