<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mxwlone.NewEntryFragment"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/drinkEventLayoutDate"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:gravity="start" >

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/text_view_date_text"
            android:inputType="none"
            android:textSize="20sp" />

        <EditText
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:ems="10"
            android:id="@+id/drinkEventEditTextDate"
            android:editable="false" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:gravity="start">


        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/text_view_time_text"
            android:inputType="none"
            android:textSize="20sp" />

        <EditText
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/drinkEventEditTextTime"
            android:editable="false"
            android:inputType="none" />


    </LinearLayout>

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:id="@+id/drinkEventLabelAmount"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/text_view_amount_text"
            android:inputType="none"
            android:textSize="20sp" />

        <EditText
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/drinkEventEditTextAmount"
            android:layout_toRightOf="@+id/drinkEventLabelAmount"
            />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="+100"
            android:id="@+id/drinkEventAdd100Button" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+50"
            android:layout_toLeftOf="@id/drinkEventAdd100Button"
            android:id="@+id/drinkEventAdd50Button" />


    </RelativeLayout>

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <Button
            android:id="@+id/drinkEventCancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_cancel_text"
            android:onClick="cancelButtonClicked"
            />

        <Button android:id="@+id/drinkEventOkButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_ok_text"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:backgroundTint="@color/blue_normal"
            android:layout_alignBaseline="@id/drinkEventCancelButton"/>

    </RelativeLayout>

</LinearLayout>